--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -38,6 +38,6 @@ gem 'spring',        group: :development
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 
-
 # Auth
 gem 'devise'
+gem 'doorkeeper'
