--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "grunt-bower-install": "~0.7.0",
     "grunt-concurrent": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-compass": "~0.6.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.5.0",
@@ -31,7 +31,8 @@
     "karma-ng-scenario": "^0.1.0",
     "grunt-karma": "^0.9.0",
     "karma": "^0.12.24",
-    "karma-ng-html2js-preprocessor": "^0.1.2"
+    "karma-ng-html2js-preprocessor": "^0.1.2",
+    "grunt-coffee-server": "^0.1.1"
   },
   "engines": {
     "node": ">=0.8.0"
